[tool.poetry]
name = "online_taxi_service_etl_project"
version = "0.1.0"
description = ""
authors = ["Karanpreet Kaur <karanpreet088@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"
pandas = "^1.4.4"
SQLAlchemy = "^1.4.40"
poetry-dotenv-plugin = "^0.1.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
